--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,25 +1,20 @@
 ---
-title: Template Documentation Site
+owner_slack: "#operations-engineering-alerts"
+title: Cloud Optimisation and Accountability
+last_reviewed_on: 2025-06-16
+review_in: 6 months
 ---
 
-# <%= current_page.data.title %>
+# Cloud Optimisation and Accountability
 
-## Legacy Tech Docs Template Documentation
+## Introduction
 
-The Government Digital Service previously published documentation for [`alphagov/tdt-documentation`](https://github.com/alphagov/tdt-documentation), but closed down the site when [GOV.UK PaaS](https://www.cloud.service.gov.uk/) was decommissioned.
+## Audience
 
-This documentation has been preserved under [`legacy-tdt-documentation`](legacy-tdt-documentation) from the [commit](https://github.com/alphagov/tdt-documentation/commit/53c1d22110ebe6c5123d45c4fd68b833db6cae8c) when it was decommissioned. Changes have been made to fix links specifically in `partials/_links.erb` and any pages that use images.
+## Contents
 
-- [Accessibility](legacy-tdt-documentation/accessibility)
+## Quick Links
 
-- [Configure your documentation project](legacy-tdt-documentation/configure_project)
+## Additional Resources
 
-- [Create a documentation project](legacy-tdt-documentation/create_project)
-
-- [Maintain your documentation project](legacy-tdt-documentation/maintain_project)
-
-- [Publish your documentation project](legacy-tdt-documentation/publish_project)
-
-- [Support](legacy-tdt-documentation/support)
-
-- [Write your documentation](legacy-tdt-documentation/write_docs)
+## Organisational Fit
