Add landing page content

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,20 +1,32 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Cloud Optimisation and Accountability
-last_reviewed_on: 2025-06-16
+last_reviewed_on: 2025-06-19
 review_in: 6 months
 ---
 
 # Cloud Optimisation and Accountability
 
-## Introduction
+## Our mission
 
-## Audience
+To optimise cloud costs and environmental impact, and maximise value of cloud to Ministry of Justice (MoJ) through collaboration, transparency and continuous improvement.
 
-## Contents
+## How are we going to help MoJ do that?
 
-## Quick Links
+We are an enablement team, helping all other teams, improve the value we get from our cloud infrastructure, through a data driven approach for optimising cost, environmental impact, and usage. This is based around the cultural practices of [FinOps](https://www.finops.org/introduction/what-is-finops/) and [GreenOps](https://learn.greensoftware.foundation/). 
 
-## Additional Resources
+We are putting data in the path of all those who make decisions around how we build and operate software within the Cloud, as well as helping to set standards and best practices.
+
+We have published our [2025/26 Strategy](https://justiceuk.sharepoint.com/:w:/r/sites/CloudOptimisationAccoutabilityTeam/Shared%20Documents/General/Strategy/FinOps_GreenOps%20Strategy%202025_26%20v1.docx?d=w5f167eb28d8646e9a944b0b5131054b3&csf=1&web=1&e=qLPGWO) for more details.
 
 ## Organisational Fit
+
+The Cloud Optimisation and Accountability Team is part of the Hosting Service Area within Platforms & Architecture.
+
+## How to contact the Team
+
+You can contact the Team via our Slack Channel - [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C or Via Teams at [CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
+
+## Join the Community
+
+To keep up to date with what the team is working on, to share stores around how you are optimising your cloud resources, or to find out what is going on in the wider world of FinOps and GreenOps please join our community slack channel [#finop-greenops-community](https://moj.enterprise.slack.com/archives/C088XQP62D9)
