--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -25,7 +25,7 @@ The Cloud Optimisation and Accountability Team is part of the Hosting Service Ar
 
 ## How to contact the Team
 
-You can contact the Team via our Slack Channel - [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C or Via Teams at [CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
+You can contact the Team via our Slack Channel - [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C) or Via [Teams](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
 
 ## Join the Community
 
