--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -7,26 +7,19 @@ review_in: 6 months
 
 # Cloud Optimisation and Accountability
 
-## Our mission
+## [Mission Statement](documentation/mission-statement/mission-statement.html)
+Read about our mission.
 
-To optimise cloud expenditure, reduce environmental impact, and maximise the value of cloud computing to the Ministry of Justice (MoJ) through collaboration, transparency and continuous improvement.
+## [FinOps and GreenOps at MoJ](documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html)
+View dashboards and reports and discover how you can use your cost and usage data to optimise your cloud computing value.
 
-## How are we going to help MoJ do that?
+## [Team Information](documentation/team-information/team-information.html)
+Find out about the Cloud Optimisation and Accountability team ADRS and how we work and engineer solutions together.
 
-We are an enablement team, helping all other teams to improve the value we get from our cloud infrastructure, through a data driven approach to optimise cost and usage, and reduce environmental impact. These strategies are based on the cultural practices of [FinOps](https://www.finops.org/introduction/what-is-finops/) and [GreenOps](https://learn.greensoftware.foundation/). 
+## [Operations Engineering Legacy](documentation/operations-engineering-legacy/operations-engineering-legacy.html)
+Discover legacy documentation.
 
-We are putting data in the path of all those who make decisions around how we build and operate software within the Cloud, as well as helping to set standards and best practices.
-
-Please see our published our [2025/26 Strategy](https://justiceuk.sharepoint.com/:w:/r/sites/CloudOptimisationAccoutabilityTeam/Shared%20Documents/General/Strategy/FinOps_GreenOps%20Strategy%202025_26%20v1.docx?d=w5f167eb28d8646e9a944b0b5131054b3&csf=1&web=1&e=qLPGWO) for more details.
-
-## Organisational Fit
-
-The Cloud Optimisation and Accountability Team is part of the Hosting Service Area within Platforms & Architecture.
-
-## How to contact the Team
-
-You can contact the Team via our Slack Channel - [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C) or via [Teams](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
-
-## Join the Community
-
-To keep up to date with what the team is working on, to share stories about how you are optimising your cloud resources, or to find out what is going on in the wider world of FinOps and GreenOps please join our community slack channel [#finops-greenops-community](https://moj.enterprise.slack.com/archives/C088XQP62D9)
+## Contacts
+- Team Slack channel: [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C)
+- Email us: [CloudOptimisationAccoutabilityTeam](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
+- Join our community Slack channel: [#finops-greenops-community](https://moj.enterprise.slack.com/archives/C088XQP62D9)
