tidy pages under construction

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -6,9 +6,8 @@ review_in: 6 months
 ---
 
 # FinOps and GreenOps at MoJ
-Some blah
+Page under construction
 
-- dashboards
-- report 1
-- report 2
-- etc
+- Page
+- under
+- construction
