--- a/source/documentation/operations-engineering-legacy/operations-engineering-legacy.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-legacy.html.md.erb
@@ -6,11 +6,8 @@ review_in: 6 months
 ---
 
 # Operations Engineering Legacy
-Some blah
+Page under construction
 
-- list
-- of
-- links
-- to
-- specific
-- pages
+- Page
+- under
+- construction
