--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,7 +14,7 @@ Read about our mission.
 View dashboards and reports and discover how you can use your cost and usage data to optimise your cloud computing value.
 
 ## [Team Information](documentation/team-information/team-information.html)
-Find out about the Cloud Optimisation and Accountability team ADRS and how we work and engineer solutions together.
+Find out about the Cloud Optimisation and Accountability team ADRs and how we work and engineer solutions together.
 
 ## [Operations Engineering Legacy](documentation/operations-engineering-legacy/operations-engineering-legacy.html)
 Discover legacy documentation.
