--- a/source/documentation/team-information/team-information.html.md.erb
+++ b/source/documentation/team-information/team-information.html.md.erb
@@ -6,8 +6,8 @@ review_in: 6 months
 ---
 
 # Team Information
+Page under construction
 
-- ADRS
-- WoW
-- WoE
-- etc
+- Page
+- under
+- construction
