restructure and lift'n'shift of ADRs and Team internal docs

--- a/source/documentation/team-information/team-information.html.md.erb
+++ b/source/documentation/team-information/team-information.html.md.erb
@@ -6,8 +6,35 @@ review_in: 6 months
 ---
 
 # Team Information
-Page under construction
+🔔 Content under review 🔔
 
-- Page
-- under
-- construction
+## Architectural Decision Records
+
+- [Architectural Decision Records](architectural-decision-records/architectural-decision-records.html)
+
+## Team Practises
+
+- [Ways of Working](team-practises/ways-of-working.html)
+- [Ways of Engineering](team-practises/ways-of-engineering.html)
+- [Firebreak Sprints](team-practises/firebreak-sprints.html)
+
+## Internal Processes
+
+- [Add a Runbook](internal-processes/add-a-runbook.html)
+- [Add a Slack Alert to our Alert Channel](internal-processes/add-slack-alert.html)
+- [Communication Plan](internal-processes/communication-plan.html)
+- [How to be Support](internal-processes/how-to-be-support.html)
+- [Incident Log](internal-processes/incident-log.html)
+- [Incident Response](internal-processes/incident-response.html)
+- [Leavers Guide](internal-processes/leavers-guide.html)
+- [Manage Slack RSS Feeds](internal-processes/manage-slack-rss-feeds.html)
+- [New Joiners Guide](internal-processes/new-joiners-guide.html)
+- [Post-Incident Review Proceses](internal-processes/post-incident-review-proceses.html)
+- [Python Best Practice](internal-processes/python-best-practise.html)
+- [Respond to MoJ Organisation Leavers](internal-processes/respond-to-moj-org-leavers.html)
+- [Responding to Dependency Alerts](internal-processes/responding-to-dependency-alerts.html)
+- [Risk Review](internal-processes/risk-review.html)
+- [Secret Naming Convention](internal-processes/secret-naming-convention.html)
+- [Software Procurement Processes](internal-processes/software-procurement.html)
+- [Testing and Release Process](internal-processes/testing-release-process.html)
+- [Working Out of Hours](internal-processes/working-out-of-hours.html)
