fix adr20 btoken link

--- a/source/documentation/team-information/internal-processes/secret-naming-convention.html.md.erb
+++ b/source/documentation/team-information/internal-processes/secret-naming-convention.html.md.erb
@@ -7,7 +7,7 @@ review_in: 3 months
 
 # Secret Naming Convention
 
-The naming convention detailed below is also defined in [ADR-020](../adrs/adr-020.html) where it specifically relates to the namin of
+The naming convention detailed below is also defined in [ADR-020](../architectural-decision-records/adr-020.html) where it specifically relates to the namin of
 GitHub Personal Access Tokens in the bot account. However the required properties of the name apply to any secret created.
 
 The naming convention consists of three parts which should ensure uniqueness; `<business_domain>_<usage>_<permission_type>`
