--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/user-guide-index.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/user-guide-index.html.md.erb
@@ -27,6 +27,20 @@ This guide is designed for developers, power users, and all team members at the 
 * [Not Supported by Operations Engineering](quicklinks/we-dont-do-that.html)
 * [Operations Engineering Break Glass Process For Emergency Access](quicklinks/break-glass-process.html)
 
+### Services We Support
+
+#### GitHub
+
+* [Management](github/mojgithubenterprise.html)
+* [Storing source code](github/storing-source-code.html)
+* [Using Git](github/using-git.html)
+* [Community Slack Channel]github/githubcommunity.html)
+* [How to Create Organisation-Level Fine-Grained Tokens] (github/Guidance-on-creating-PAT-Tokens.html)
+* [Tips on Managing Notifications](github/managing-github-notifications.html)
+* [Licensing software or code](github/licencing-software-or-code.html)
+* [Advice: Store Code Privately](github/storing-code-in-private.html)
+* [Advice: Store Code Publicly](github/storing-code-in-public.html)
+
 ### Organisational Fit
 
 Operations Engineering falls under the Hosting Service within the Platforms and Architecture sector at the Ministry of Justice.
