--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/user-guide-index.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/user-guide-index.html.md.erb
@@ -34,7 +34,7 @@ This guide is designed for developers, power users, and all team members at the 
 * [Management](github/mojgithubenterprise.html)
 * [Storing source code](github/storing-source-code.html)
 * [Using Git](github/using-git.html)
-* [Community Slack Channel]github/githubcommunity.html)
+* [Community Slack Channel](github/githubcommunity.html)
 * [How to Create Organisation-Level Fine-Grained Tokens] (github/Guidance-on-creating-PAT-Tokens.html)
 * [Tips on Managing Notifications](github/managing-github-notifications.html)
 * [Licensing software or code](github/licencing-software-or-code.html)
