--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/ci/circleci.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/ci/circleci.html.md.erb
@@ -17,7 +17,7 @@ We have a [#circleci-users](https://mojdt.slack.com/archives/CCSD5F397) communit
 
 ## Accessing CircleCI
 
-Access to CircleCI is granted via SSO, using your GitHub identity. If you don't have access to one of our GitHub orginsations please [request access](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/mojgithubenterprise.html#access-management) in the first instance.
+Access to CircleCI is granted via SSO, using your GitHub identity. If you don't have access to one of our GitHub orginsations please [request access](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/mojgithubenterprise.html#access-management) in the first instance.
 
 **Step 1** - From the main [CicleCI Login page](https://circleci.com/vcs-authorize/) click on the **Log in** button.
 
