--- a/source/documentation/team-information/internal-processes/new-joiners-guide.html.md.erb
+++ b/source/documentation/team-information/internal-processes/new-joiners-guide.html.md.erb
@@ -26,7 +26,7 @@ Add new team members to `#operations-engineering-team`, `#operations-engineering
 
 ## Ops-Engineering site
 
-This [site](https://user-guide.operations-engineering.service.justice.gov.uk/#moj-operations-engineering-user-guides) explains the Tools below. Details of vision for team, how we work, all our services, code and runbooks.
+This [site](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/user-guide-index.html) explains the Tools below. Details of vision for team, how we work, all our services, code and runbooks.
 
 ## Technical Guidance site
 
