--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-code-in-public.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-code-in-public.html.md.erb
@@ -98,16 +98,16 @@ Always consult with the security team and follow best practices for handling sen
 - [Be open and use open source](https://www.gov.uk/guidance/be-open-and-use-open-source)
 - [How to Make Source Code Open and Reusable](https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed)
 - [Technology Code of Practice (TCoP)](https://www.gov.uk/guidance/the-technology-code-of-practice#be-open-and-use-open-source)
-- [GitHub Guidelines for ministryofjustice](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/mojgithubenterprise.html)
+- [GitHub Guidelines for ministryofjustice](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/mojgithubenterprise.html)
 - [Managing software dependiencies](https://www.gov.uk/service-manual/technology/managing-software-dependencies)
-- [Storing source code](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#storing-source-code)
+- [Storing source code](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html)
 - [Documenting how your service is supported](https://technical-guidance.service.justice.gov.uk/documentation/standards/documenting-how-your-service-is-supported.html)
 
 [be and use open by default]: https://www.gov.uk/guidance/government-design-principles#be-open-by-default
 [security considerations for open source software]: https://www.gov.uk/government/publications/open-source-guidance/security-considerations-when-coding-in-the-open
 [when code should be open]: https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed
-[secrets in code]: https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#storing-source-code
-[dealing with sensitive leaks]: https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#converting-private-or-internal-repositories-to-public
+[secrets in code]: https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html
+[dealing with sensitive leaks]: https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html#converting-private-or-internal-repositories-to-public
 [documenting your code]: https://technical-guidance.service.justice.gov.uk/documentation/standards/documenting-how-your-service-is-supported.html
 [development principles]: https://technical-guidance.service.justice.gov.uk/documentation/principles/development-principles.html
-[private repositories]: https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#private-repositories
+[private repositories]: https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html#private-repositories
