--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-code-in-private.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-code-in-private.html.md.erb
@@ -105,7 +105,7 @@ Some other considerations:
 - Ensure all stakeholders are aligned on the decision to move from private/internal to public.
 - As the repository will become part of MoJ's public domain, you may need to re-evaluate its standards compliance.
 
-More information can be found in [this guide](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#storing-source-code).
+More information can be found in [this guide](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html).
 
 ### References
 
@@ -113,15 +113,15 @@ More information can be found in [this guide](https://user-guide.operations-engi
 
 * [How to Make Source Code Open and Reusable](https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed)
 * [Technology Code of Practice (TCoP)](https://www.gov.uk/guidance/the-technology-code-of-practice#be-open-and-use-open-source)
-* [GitHub Guidelines for ministryofjustice](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/mojgithubenterprise.html)
+* [GitHub Guidelines for ministryofjustice](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/mojgithubenterprise.html)
 * [Managing software dependiencies](https://www.gov.uk/service-manual/technology/managing-software-dependencies)
-* [Storing source code](https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#storing-source-code)
+* [Storing source code](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html)
 * [Documenting how your service is supported](https://technical-guidance.service.justice.gov.uk/documentation/standards/documenting-how-your-service-is-supported.html)
 
 [be and use open by default]: https://www.gov.uk/guidance/government-design-principles#be-open-by-default
 [security considerations for open source software]: https://www.gov.uk/government/publications/open-source-guidance/security-considerations-when-coding-in-the-open
 [when code should be open]: https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed
-[secrets in code]: https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#storing-source-code
+[secrets in code]: https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html
 [documenting your code]: https://technical-guidance.service.justice.gov.uk/documentation/standards/documenting-how-your-service-is-supported.html
 [development principles]: https://technical-guidance.service.justice.gov.uk/documentation/principles/development-principles.html
-[private repositories]: https://user-guide.operations-engineering.service.justice.gov.uk/documentation/information/storing-source-code.html#private-repositories
+[private repositories]: https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/operations-engineering-legacy/operations-engineering-user-guide/github/storing-source-code.html#private-repositories
