--- a/source/documentation/operations-engineering-legacy/operations-engineering-legacy.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-legacy.html.md.erb
@@ -8,4 +8,4 @@ review_in: 6 months
 # Operations Engineering Legacy
 
 * [Operations Engineering User Guide](operations-engineering-user-guide/user-guide-index.html)
-* [Operations Engineering Runbooks](operations-engineering-runbooks/runbooks-index.html
+* [Operations Engineering Runbooks](operations-engineering-runbooks/runbooks-index.html)
