Update FinOps index

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,13 +1,20 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-06-19
+last_reviewed_on: 2025-07-10
 review_in: 6 months
 ---
 
 # FinOps and GreenOps at MoJ
-Page under construction
 
-- Page
-- under
-- construction
+## Standards
+
+Mandatory practices that must be followed within Ministry of Justice
+
+* [Tagging Standard](standards/tagging.html)
+
+Pages under construction
+
+- Patterns (Discover good and best practise patterns for your projects)
+- Tools (Tools to help team understand cost, usage and enviornmental impact)
+- Reports (standard formatted data of cost and impacted)
