--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -9,7 +9,7 @@ review_in: 6 months
 
 ## Standards
 
-Mandatory practices that must be followed within Ministry of Justice
+Mandatory practices that must be followed within Ministry of Justice.
 
 * [Tagging Standard](standards/tagging.html)
 
