--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -17,4 +17,4 @@ Pages under construction
 
 - Patterns (Discover good and best practise patterns for your projects)
 - Tools (Tools to help team understand cost, usage and enviornmental impact)
-- Reports (standard formatted data of cost and impacted)
+- Reports (standard formatted data of cost and impact)
