--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -13,8 +13,13 @@ Mandatory practices that must be followed within Ministry of Justice.
 
 * [Tagging Standard](standards/tagging.html)
 
-Pages under construction
+## Patterns
 
-- Patterns (Discover good and best practise patterns for your projects)
+Discover good and best practise patterns for your projects
+
+* [Reserving Infrastructure Capacity](patterns/reserved-instances.html)
+
+## Pages under construction
+
 - Tools (Tools to help team understand cost, usage and enviornmental impact)
 - Reports (standard formatted data of cost and impact)
