--- a/source/documentation/finops-and-greenops-at-moj/patterns/reserved-instances.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/patterns/reserved-instances.html.md.erb
@@ -5,7 +5,7 @@ last_reviewed_on: 2025-07-10
 review_in: 6 months
 ---
 
-# Reserving infrastucture capacity
+# Reserving infrastructure capacity
 
 To get the best value for money from cloud infrastructure, we should
 pay in advance for parts of it that are going to be in active use over
