--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-07-10
+last_reviewed_on: 2025-07-16
 review_in: 6 months
 ---
 
@@ -17,6 +17,9 @@ Mandatory practices that must be followed within Ministry of Justice.
 
 Discover good and best practise patterns for your projects
 
+### Rate Optimisation
+
+* [What is Rate Optimisation?](patterns/rate-optimisation.html)
 * [Reserving Infrastructure Capacity](patterns/reserved-instances.html)
 
 ## Pages under construction
