--- a/source/documentation/finops-and-greenops-at-moj/patterns/spot-instances.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/patterns/spot-instances.html.md.erb
@@ -33,6 +33,11 @@ Avoid Spot Instances when you need:
 
 - low-latency requirements - i.e. spot interruptions might introduce unacceptable latency or recovery time
 
+## Case Study
+
+This blog about [How the Home Office’s Immigration Technology department reduced its cloud costs by 40%](https://www.gov.uk/government/case-studies/how-the-home-offices-immigration-technology-department-reduced-its-cloud-costs-by-40) includes their adoption of Spot Instances for non-production services, as well as other approaches.
+
 ## Reference
 
 - [Amazon EC2 Spot Instances User Guide](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-spot-instances.html)
+
