Add Spot Instances to index

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -21,6 +21,7 @@ Discover good and best practise patterns for your projects
 
 * [What is Rate Optimisation?](patterns/rate-optimisation.html)
 * [Reserving Infrastructure Capacity](patterns/reserved-instances.html)
+* [Spot Instances](patterns/spot-instances.html)
 
 ## Pages under construction
 
