--- a/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
@@ -112,34 +112,31 @@ These sessions ensure transparency, collaboration, and rapid improvement. By sho
 we align everyone with our progress and gather immediate feedback. This process fosters team pride and accountability. Through these efficient
 sessions, we celebrate successes, pinpoint areas for growth, and pivot effectively for upcoming sprints, ensuring ourcontinuous development and team cohesion.
 
-### **✅ Milestone Planning**
+### **💡 EPIC Breakdown**
 
-To manage and deliver larger, more complex projects, we dedicate focused planning sessions for each phase of our Agile delivery process. These sessions are structured around specific delivery phases—Discovery, Alpha, Beta, Live, and Retirement—each represented by a dedicated milestone in our GitHub repository.
+To manage and deliver larger, more complex projects, we dedicate focused planning sessions to review EPICs and break these down into workable sub-issues.
 
-1. Dedicated Milestones for Each Phase: We create a separate milestone for each delivery phase in GitHub, ensuring transparent tracking and accountability for all tasks and objectives associated with that phase.
+1. EPIC User Story: We create an EPIC user story for the overall project.
 
-2. Planning for Future Phases: After establishing the tasks for the current milestone, we look ahead to upcoming phases. This proactive approach allows us to anticipate future needs and align our efforts accordingly, ensuring smooth transitions between phases.
+2. Create Sub-Issues: During the planning phase we idenfity and create Sub-Issues that are linked to the overal EPIC.
 
 3. Fostering Collaboration and Inclusion: These planning sessions are designed to be inclusive, giving every team member a voice in the process. Engaging all team members early enhances collaboration, gathers diverse insights, and ensures alignment on our shared goals.
 
 #### Meeting Structure
 
-Below is a suggested structure for the milestone planning meetings. This can evolve over time as we find a system that works best for the team:
+Below is a suggested structure for EPIC Breakdown meetings. This can evolve over time as we find a system that works best for the team:
 
-1. **Review Full Milestone List (~10 Minutes):**:
-   Review the full list of Operations Engineering [milestones](https://github.com/ministryofjustice/operations-engineering/milestones). Some milestones are hidden from the [default list](https://github.com/orgs/ministryofjustice/projects/52/views/11) due to no active stories being allocated to them.
+1. **Review Current EPICS (~10 Minutes):**:
+   Review the full list of EPICS.
 
-   This section of the meeting is to confirm that the team is still happy with their state, and whether additional tickets are needed to bring these into the active milestone section.
+   This section of the meeting is to confirm that the team is still happy with their state, and whether additional tickets are needed.
 
-2. **Initial Ticket Sort (~40 Minutes):**:
-   Starting from the top of the active milestone list the team reviews the current list of tickets. Each ticket is confirmed by the team to be an essential part of the work needed to complete the milestone.
+2. **Breakdown (~40 Minutes):**:
+   For each EPIC the team reviews the current list of tickets. Each ticket is confirmed by the team to be an essential part of the work needed to complete the EPIC.
 
-   Once completed, we add any relevant stories from the backlog that currently have no milestones assigned, and create new stories should we feel further work is needed. These stories are not to be filled out in detail, and act only as placeholders until the team's refinement meeting.
+   As we review update the EPIC and create Sub-Issues. These do not need to be fully formed, but must be created using the stort template. Sub-Issues will need to be refined before they can be worked on.
 
-   For this section we need to take into consideration the stage of the milestone (alpha, beta, etc) when deciding on the work that is required.
-
-3. **Milestone Progress Overview (~10 Minutes):**:
-   The team performs a final review of the active milestones to ensure we are happy that everything in progress is relevant. This is an opportunity to close off milestones that are complete or are no longer relevant to the team.
+   For this section we need to take into consideration the stage of the EPIC (alpha, beta, etc) when deciding on the work that is required.
 
 ### **✅ Retrospectives**
 
