Change from Backlog to Story Refinement

--- a/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
@@ -98,13 +98,12 @@ Outcome: The team was unable to give sufficient attention to the goal. This serv
 
 ## **Ceremonies**
 
-### **✅ Backlog Refinement**
+### **✅ Story Refinement**
 
 These sessions enable us to review, prioritise, and adapt our tasks. By fine-tuning upcoming work items, we ensure
-clarity and focus. Backlog refinement promotes effective planning, enabling us to address potential challenges in
+clarity and focus. Refinement promotes effective planning, enabling us to address potential challenges in
 advance. These sessions foster collaboration, empowering team members to contribute ideas and clarify doubts. Through
-these targeted discussions, we maintain a well-organized backlog. Engaging in backlog refinement enhances our readiness
-for future sprints.
+these targeted discussions, we maintain a well-organized backlog and workable stories.
 
 ### **✅ Demos**
 
