Add WoW review updates

--- a/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
@@ -27,6 +27,7 @@ To increase team awareness of progress and/or updates on a specific ticket, we a
 
 - New information is discovered that may alter the acceptance criteria or functional requirements of a ticket.
 - A team member has upcoming leave and is still working on a ticket, ensuring that when picked up by someone new a brief overview of the current status is passed on.
+- There are related PR's or stories, in which case we will add the relevant links.
 
 ### **✅ We Use 2-Week Sprints**
 
@@ -39,9 +40,9 @@ We embrace Firebreak Sprints as a vital component of our engineering process, de
 
 For inspiration and guidance, we look to the GOV.UK team's approach to Firebreak Sprints. Their experiences underscore the value of such initiatives in promoting technical excellence and team well-being. For more information, please see our documentation describing [Firebreak Sprints](firebreak-sprints.html).
 
-### **✅ Sprint backlog contents**
+### **✅ Current sprint contents**
 
-The stories in a sprint backlog will depend on priorities, however we will always include stories from the following catagories:
+The stories in the current sprint will depend on priorities, however we will always include stories from the following catagories:
 
 - **sprint goal stories** - these will directly relate to roadmap priorities and form the majority of the sprint backlog.
 - **refactor story** - at least one refactor story to ensure that our code is well maintained.
@@ -62,6 +63,7 @@ Quarterly Goals are:
 - ✅ A concise list of 3 goals that are achievable within the quarter
 - ✅ Aligned with the team's overall objectives and priorities
 - ✅ Regularly reviewed and updated to reflect our evolving needs and progress i.e. if a goal is completed early, we can add a new one or adjust existing goals as we learn more about our work
+- ✅ The first sprint retro of each new quarter will be a Ways Of Working reflection to discuss if any changes or updates to our working practises are required
 
 Quarterly Goals are not:
 
