Review and updates

--- a/source/documentation/team-information/internal-processes/add-slack-alert.html.md.erb
+++ b/source/documentation/team-information/internal-processes/add-slack-alert.html.md.erb
@@ -1,8 +1,8 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Add a Slack alert to our alert channel
-last_reviewed_on: 2025-04-10
-review_in: 3 months
+last_reviewed_on: 2025-07-28
+review_in: 6 months
 ---
 
 # Add a Slack alert to our alert channel
@@ -39,7 +39,7 @@ Once this has been done, every time the selected feed reports an issue, it will 
 
 ### Requirements
 
-- Access to the Operations Engineering tools account (it's in LastPass)
+- Access to the Operations Engineering tools account (it's in 1Password)
 - The end point you wish monitor
 
 ### Adding a Pingdom alert
