--- a/source/documentation/operations-engineering-legacy/operations-engineering-runbooks/runbooks-index.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-runbooks/runbooks-index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: MoJ Operations Engineering Runbooks
-last_reviewed_on: 2025-07-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -93,3 +93,7 @@ refer users to.
 ## SSO
 
 * [Adding SSO to a tool](tools/add-sso-to-tool.html)
+
+## Internal Processes
+
+* [How to be Support](internal/how-to-be-support.html)
