--- a/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-working.html.md.erb
@@ -27,7 +27,7 @@ To increase team awareness of progress and/or updates on a specific ticket, we a
 
 - New information is discovered that may alter the acceptance criteria or functional requirements of a ticket.
 - A team member has upcoming leave and is still working on a ticket, ensuring that when picked up by someone new a brief overview of the current status is passed on.
-- There are related PR's or stories, in which case we will add the relevant links.
+- There are related PR's or stories, in which case we will add the relevant link. Preferably, we use the story  **Development** setting to link to PRs and the **Relationships** setting to indicate story dependancies (parent, blocking).
 
 ### **✅ We Use 2-Week Sprints**
 
