--- a/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/ci/circleci.html.md.erb
+++ b/source/documentation/operations-engineering-legacy/operations-engineering-user-guide/ci/circleci.html.md.erb
@@ -25,11 +25,11 @@ Access to CircleCI is granted via SSO, using your GitHub identity. If you don't 
 
 **Step 3** - Click on the **Log in with GitHub** button.
 
-![CircleCI Login Screenshot](../../images/circleci-login.png)
+![CircleCI Login Screenshot](../../../../../images/circleci-login.png)
 
 **Step 4** - After authentication via SSO you must select the Organisation you wish to access from the list of available organisations to finish.
 
-![CircleCI Organisation Selection Screenshot](../../images/circleci-organisations.png)
+![CircleCI Organisation Selection Screenshot](../../../../../images/circleci-organisations.png)
 
 Access to projects and pipelines within CircleCI will be defined by the access permissions to projects in GitHub. If you can't access the appropriate project please contact the maintainer or admin of your GitHub Repository. If there is no admin or maintainer please contact the team in our Slack channel, [#ask-operations-engineering](https://mojdt.slack.com/archives/C01BUKJSZD4), or via email at [operations-engineering@digital.justice.gov.uk](mailto:operations-engineering@digital.justice.gov.uk).  
 
