Add image and additional content

--- a/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
@@ -28,11 +28,14 @@ A key part of purchasing a Savings Plan is determining your hourly commitment. T
 
 To determine our hourly usage we use the [Purchase Analyzer](https://docs.aws.amazon.com/savingsplans/latest/userguide/sp-purchase-analysis.html) within the Billing and Cost Management console. When this process is finished it will provide you with an chart of hourly usage.
 
+![hourly usage graph example](../../images/hourly-usage-graph-example.png)
 
-
-If you over commit you introduce waste, or if you undercommit you may not maximise your savings. At MoJ we aim to cover **70%** of our usage. This ensures we maximise our savings without risk of over commitment. 
+The peaks in the chart show spiky and inconsistent usage. Committing at these levels leads to waste. Ideally we want to choose an hourly rate that is below this spikly area i.e. the blue line. At MoJ we aim to cover **70%** of our usage. This ensures we maximise our savings without risk of over commitment. 
 
 > NB - We may aim to increase this coverage as our practice matures.
 
+## Commitment durantion
 
+## Purchase the Savings Plan
 
+## Reviewing performance
