--- a/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
@@ -36,6 +36,20 @@ The peaks in the chart show spiky and inconsistent usage. Committing at these le
 
 ## Commitment durantion
 
+Historically MoJ has purchased an annual Savings Plan. However, for the plan that starts in May 2025 we opted to a blended 3 year and 1 year plan.
+
 ## Purchase the Savings Plan
 
-## Reviewing performance
+Follow AWS documentation to [purchase the Saving Plan](https://docs.aws.amazon.com/savingsplans/latest/userguide/purchase-sp-direct.html).
+
+> NB - You must select `No Upfront`payment option.
+
+> NB - You must schedule a new plan to start as the existing plan finished i.e. to ensure no break in coverage.
+
+## Reviewing plan performance
+
+We review performance of the Savinsg Plan on a monthly basis. There are two reports available to us for this purpose:
+
+- The [Savings Plans coverage report](https://docs.aws.amazon.com/savingsplans/latest/userguide/ce-sp-usingCR.html) shows what percentage of your applicable AWS usage costs are being covered by your Savings Plans during your selected time period.
+
+- Savings Plans [utilization](https://docs.aws.amazon.com/savingsplans/latest/userguide/ce-sp-usingPR.html) shows you the percentage of your Savings Plans commitment that you're using across your On-Demand usage. You can use your Savings Plans utilization report to visually understand how your Savings Plans apply to your usage over the configured time period. Along with a visualized graph, the report shows high-level metrics based on your selected Savings Plan, filters, and lookback periods. Utilization is calculated based on how your Savings Plans applied to your usage over the lookback period.
