--- a/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
@@ -34,7 +34,7 @@ The peaks in the chart show spiky and inconsistent usage. Committing at these le
 
 > NB - We may aim to increase this coverage as our practice matures.
 
-## Commitment durantion
+## Commitment duration
 
 Historically MoJ has purchased an annual Savings Plan. However, for the plan that starts in May 2025 we opted to a blended 3 year and 1 year plan. 
 
