Add a section about using AP for data pipelines

--- a/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
@@ -54,6 +54,12 @@ We will review this decision in the future when there is a need to add more envi
 |Provides access to CPs Kubernetes cluster|Provides Security baselines, Isolated networking, CI/CD for infrastructure|
 |Example: Join GitHub app (🪦); containerised app hosting a website, running small supporting infra|Example: NOMIS; mainaining a huge database, restricting access, integrating with microservices (which may be on CP)|
 
+### ✅ Use Analytical Platform for Data Pipelines
+
+The [Analytical Platform](https://controlpanel.services.analytical-platform.service.justice.gov.uk/tools/) is the recommended in-house service to support end-to-end data pipelines including raw data ingestion, transformation, data modelling, 
+analysis, visualisation and dissemination as well as managing access permisions. [Analytical Platform User Guidance](https://user-guidance.analytical-platform.service.justice.gov.uk/).
+
+
 ### ✅ Do Not Use The MoJ Digital Services (DSD Account) to Host Services
 
 The MoJ Digital Services AWS Account is a legacy account that is currently owned by several teams and is not suitable for hosting new services.
