--- a/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
@@ -17,9 +17,9 @@ This foundational document outlines our collective approach to engineering pract
 
 ## Hosting Services and Infrastructure
 
-### ✅ Use GitHub as a central code hosting and collaboration platform
+### ✅ Use GitHub as the Central Code Hosting and Collaboration Platform
 
-We use GitHub as a central repository for our codebase, documentation, and collaboration. GitHub provides a reliable and widely adopted ecosystem for version control, collaboration, and CI/CD integration. Our team benefits from features such as pull requests, code reviews, issue tracking, and GitHub Actions, which streamline our development workflow. By leveraging GitHub, we ensure that our codebase remains accessible, maintainable, and transparent across the team.
+We use GitHub as the central repository for our codebase, documentation, and collaboration. GitHub provides a reliable and widely adopted ecosystem for version control, collaboration, and CI/CD integration. Our team benefits from features such as pull requests, code reviews, issue tracking, and GitHub Actions, which streamline our development workflow. By leveraging GitHub, we ensure that our codebase remains accessible, maintainable, and transparent across the team.
 
 ### ✅ Use Cloud Platform as the Primary Hosting Platform
 
